refactor: Embedded 적용 및 이넘으로 term 관리